Recipe Book ready

--- a/src/recipeBook.css
+++ b/src/recipeBook.css
@@ -128,6 +128,6 @@
 
     &:hover {
         cursor: pointer;
-        box-shadow: 0 0 10px #0d6efd;
+        box-shadow: 0 0 10px #dc3545;
     }
 }
