--- a/src/recipeBook.css
+++ b/src/recipeBook.css
@@ -12,8 +12,6 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    overflow: auto;
-    
 }
 
 .titleHead {
@@ -133,5 +131,23 @@
     &:hover {
         cursor: pointer;
         box-shadow: 0 0 10px #dc3545;
+    }
+}
+
+@media screen and (min-width: 600px) and (max-width: 1024px) and (orientation: landscape) {
+    .recipeNameContainer {
+        width: 60%;
+    }
+
+    .ingredientContainer {
+        width: 60%;
+    }
+
+    .categoryContainer {
+        width: 60%;
+    }
+
+    .btnAdd {
+        width: 30%;
     }
 }
