--- a/src/recipeBook.css
+++ b/src/recipeBook.css
@@ -70,7 +70,7 @@
 
 .btnAdd {
     margin-left: 20px;
-
+    border-radius: 12px;
     &:hover {
         cursor: pointer;
         box-shadow: 0 0 8px;
